--- a/portfolio.html
+++ b/portfolio.html
@@ -40,49 +40,67 @@
         </ul>
         <ul class="main-list">
             <li class="item">
-                <img src="./images/fon.jpg" alt="Зображення працівників на екрані компютера" width="370" height="294">
-                 <h3 class="small-title" >Технокряк </h3>
-                 <p class="small-text" >Веб-сайт</p>
+               <img class="image" src="./images/fon.jpg" alt="Зображення працівників на екрані компютера" width="370" height="294">
+                <div class="bottom-list">
+                    <h3 class="small-title" >Технокряк </h3>
+                    <p class="small-text" >Веб-сайт</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/fon1.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                <div class="bottom-list">
                  <h3 class="small-title" >Постер New Orlean vs Golden Star </h3>
                  <p class="small-text" >Дизайн</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/fon2.jpg" alt="Лого ресторану Seafood" width="370" height="294">
-                 <h3 class="small-title" >Ресторан Seafood </h3>
+                <div class="bottom-list">
+                <h3 class="small-title" >Ресторан Seafood </h3>
                  <p class="small-text" >Дизайн</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/fon3.jpg" alt="Навушники" width="370" height="294">
-                 <h3 class="small-title" >Проєкт Prime </h3>
+                <div class="bottom-list">
+                <h3 class="small-title" >Проєкт Prime </h3>
                  <p class="small-text" >Маркетинг</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/fon4.jpg" alt="Біла та коричнева коробки на столі" width="370" height="294">
-                 <h3 class="small-title" >Проєкт Boxes </h3>
+                <div class="bottom-list">
+                <h3 class="small-title" >Проєкт Boxes </h3>
                  <p class="small-text" >Додаток</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/fon5.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                 <h3 class="small-title" >Inspiration has no Borders </h3>
+                <div class="bottom-list"> 
+                <h3 class="small-title" >Inspiration has no Borders </h3>
                  <p class="small-text" >Веб-сайт</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/fon6.jpg" alt="Зображення видання Limited Edition" width="370" height="294">
-                 <h3 class="small-title" >Видання Limited Edition </h3>
+                <div class="bottom-list"> 
+                <h3 class="small-title" >Видання Limited Edition </h3>
                  <p class="small-text" >Дизайн</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/fon7.jpg" alt="Постер LAB" width="370" height="294">
-                 <h3 class="small-title" >Проєкт LAB </h3>
+                <div class="bottom-list"> 
+                <h3 class="small-title" >Проєкт LAB </h3>
                  <p class="small-text" >Маркетинг</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/fon8.jpg" alt="Ноутбук" width="370" height="294">
-                 <h3 class="small-title" >Growing Business </h3>
+                <div class="bottom-list">
+                <h3 class="small-title" >Growing Business </h3>
                  <p class="small-text" >Додаток</p>
+                </div>
             </li>
         </ul>
       </section>
