--- a/portfolio.html
+++ b/portfolio.html
@@ -29,8 +29,8 @@
      </div>
        </header>
    <main class="content">
- 
     <section class="section">
+        <div class="container">
         <ul class="buttons">
             <li class="buttons-list"><button class="button-item" type="button">Усі</button></li>
             <li class="buttons-list"><button class="button-item" type="button">Веб-сайти</button></li>
@@ -103,6 +103,7 @@
                 </div>
             </li>
         </ul>
+    </div>
       </section>
    </main>
    <!--Підвал-->
