--- a/index.html
+++ b/index.html
@@ -33,16 +33,15 @@
    <!--Тіло-->
    <main >
     <!--Герой-->
-   <div class="hero">
-    <div class="container">
-    <section>
-        <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
-        <button class="button" type="button">Замовити послугу</button>
+    <section class="hero">
+        <div class="container">
+            <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+            <button class="button" type="button">Замовити послугу</button>
+        </div>
     </section>
-    </div>
-   </div>
+
    <!--Особливості-->
-    <section class="section">  
+    <section class="section features">  
         <div class="container ">
      <ul class="preference">
         <li class="preference-list">
@@ -82,23 +81,31 @@
         <ul class="main-team">
             <li class="card">
                 <img src="./images/img-3.jpg" alt="фото дизайнера" width="270">
-                <h3 class="title">Ігор Дем'яненко</h3>
+                <div class="bottom-card">
+                    <h3 class="title">Ігор Дем'яненко</h3>
                 <p class="text-card">Product Designer</p>
+                </div>
             </li>
             <li class="card">
                 <img src="./images/img-2.jpg" alt=" фото розробника" width="270">
-                <h3 class="title">Ольга Рєпіна</h3>
+                <div class="bottom-card">
+                    <h3 class="title">Ольга Рєпіна</h3>
                 <p class="text-card">Frontend Developer</p>
+                </div>
             </li>
             <li class="card">
                 <img src="./images/img-1.jpg" alt="фото маркетолога" width="270">
+               <div class="bottom-card">
                 <h3 class="title">Микола Тарасов</h3>
                 <p class="text-card">Marketing</p>
+               </div>
             </li>
             <li class="card">
                 <img src="./images/img.jpg" alt="фото дизайнера" width="270">
+               <div class="bottom-card">
                 <h3 class="title">Михайло Єрмаков</h3>
                 <p class="text-card">UI Designer</p>
+               </div>
             </li>
         </ul>
      </div>
